--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,9 @@ install:
   - sudo pip install -e "git+https://github.com/audreyr/cookiecutter.git#egg=cookiecutter"
 
 script:
+  # On this project
   - cookiecutter --replay --config-file tests/cookiecutterrc .
   - cd test_project
-  # TODO: some testing
+  # On generated Cookiecutter template
+  - cookiecutter --replay --config-file tests/cookiecutterrc .
+  - cd test_project
