--- a/{{cookiecutter.template_project_name}}/{{'{{cookiecutter.project_name}}'}}/.travis.yml
+++ b/{{cookiecutter.template_project_name}}/{{'{{cookiecutter.project_name}}'}}/.travis.yml
@@ -20,7 +20,7 @@ matrix:
         - docker run -it -d --name container python:2 /bin/bash
         # Workaround: Docker connection plugin of Ansible requires that
         # Python is installed at specified path(/usr/bin/python) in the target container
-        - docker exec container /bin/bash -c "if [ ! -e /usr/bin/python ]; then /bin/ln -s /usr/local/bin/python /usr/bin/python; fi"
+        - docker exec container /bin/bash -c "if [ ! -e /usr/bin/python -a -e /usr/local/bin/python ]; then /bin/ln -s /usr/local/bin/python /usr/bin/python; fi"
       after_script:
         - docker rm -f container
       env:
