--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,10 @@ matrix:
       language: generic
       env:
         - TARGET=localhost
+        - PYTHONPATH="/Library/Python/2.7/site-packages:$PYTHONPATH"
+      install:
+        - sudo pip install -U setuptools
+        - sudo pip install -e "git+https://github.com/audreyr/cookiecutter.git#egg=cookiecutter"
     - os: linux
       dist: trusty
       language: python
@@ -33,7 +37,7 @@ matrix:
 sudo: required
 
 install:
-  - sudo pip install -e "git+https://github.com/audreyr/cookiecutter.git#egg=cookiecutter"
+  - pip install -e "git+https://github.com/audreyr/cookiecutter.git#egg=cookiecutter"
 
 script:
   # On this project
