--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ matrix:
         - PYTHONPATH="/Library/Python/2.7/site-packages:$PYTHONPATH"
       install:
         - sudo pip install -U setuptools
-        - sudo pip install -e "git+https://github.com/audreyr/cookiecutter.git#egg=cookiecutter"
+        - sudo pip install cookiecutter
     - os: linux
       dist: trusty
       language: python
