--- a/{{cookiecutter.template_project_name}}/{{'{{cookiecutter.project_name}}'}}/.travis.yml
+++ b/{{cookiecutter.template_project_name}}/{{'{{cookiecutter.project_name}}'}}/.travis.yml
@@ -8,6 +8,9 @@ matrix:
   include:
     - os: osx
       language: generic
+      # Ref. https://github.com/Homebrew/brew/pull/597
+      # Ref. https://langui.sh/2015/07/24/osx-clang-include-lib-search-paths/
+      osx_image: xcode8
       env:
         - TARGET=localhost
     - os: linux
